# wallpaper-engine-kde-plugin

./: README.md
src/: CMakeLists.txt
src/backend_mpv/: CMakeLists.txt
src/backend_scene/: CMakeLists.txt
